
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ uint32_t ;
struct nvram2env_softc {scalar_t__ bst; scalar_t__ addr; scalar_t__ maxsize; scalar_t__ sig; int flags; int bsh; } ;
struct nvram {int size; int sig; } ;
typedef int device_t ;


 int ENOMEM ;
 int ENXIO ;
 int M_DEVBUF ;
 int M_WAITOK ;
 int M_ZERO ;
 int NVRAM_FLAGS_BROADCOM ;
 int NVRAM_FLAGS_GENERIC ;
 int NVRAM_FLAGS_NOCHECK ;
 int NVRAM_FLAGS_UBOOT ;
 int NVRAM_MAX_SIZE ;
 void* boothowto ;
 void* bootverbose ;
 scalar_t__ bus_space_map (scalar_t__,scalar_t__,int ,int ,int *) ;
 int bus_space_unmap (scalar_t__,int ,int ) ;
 struct nvram2env_softc* device_get_softc (int ) ;
 int device_printf (int ,char*,scalar_t__,...) ;
 int free (struct nvram*,int ) ;
 int kern_setenv (char*,char*) ;
 struct nvram* malloc (scalar_t__,int ,int) ;
 int printf (char*,char*,...) ;
 scalar_t__ read_4 (struct nvram2env_softc*,scalar_t__) ;
 scalar_t__ strcasecmp (char*,char*) ;
 char* strchr (char*,char) ;
 scalar_t__ strcmp (char*,char*) ;
 scalar_t__ strlen (char*) ;
 void* strtoul (char*,int ,int ) ;

int
nvram2env_attach(device_t dev)
{
 struct nvram2env_softc *sc;
 struct nvram *nv;
 char *pair, *value, *assign;
 uint32_t sig, size, i, *tmp;

 sc = device_get_softc(dev);

 if (sc->bst == 0 || sc->addr == 0)
  return (ENXIO);

 if (bus_space_map(sc->bst, sc->addr, NVRAM_MAX_SIZE, 0,
  &sc->bsh) != 0)
  return (ENXIO);

 sig = read_4(sc, 0);
 size = read_4(sc, 4);

 if (bootverbose)
  device_printf(dev, " size=0x%05x maxsize=0x%05x\n", size,
    sc->maxsize);

 size = (size > sc->maxsize)?sc->maxsize:size;


 if (sig == sc->sig || (sc->flags & NVRAM_FLAGS_UBOOT))
 {


  size += 3;
  size &= ~3;

  nv = malloc(size, M_DEVBUF, M_WAITOK | M_ZERO);
  if (!nv)
   return (ENOMEM);

  tmp = (uint32_t *) nv;


  for (i = 0; i < size; i += 4) {
   *tmp = read_4(sc, i);
   tmp++;
  }


  if (sc->flags & NVRAM_FLAGS_BROADCOM) {
   device_printf(dev, "sig = %#x\n", nv->sig);
   device_printf(dev, "size = %#x\n", nv->size);
  }

  if (!(sc->flags & NVRAM_FLAGS_NOCHECK)) {

  }

  if (sc->flags & NVRAM_FLAGS_GENERIC)
   pair = (char*)nv+4;
  if (sc->flags & NVRAM_FLAGS_UBOOT)
   pair = (char*)nv+4;
  else if (sc->flags & NVRAM_FLAGS_BROADCOM)
   pair = (char*)nv+20;
  else
   pair = (char*)nv+4;


  for ( ; pair < (char*)tmp;
      pair += strlen(pair) + strlen(value) + 2 ) {

   if (!pair || (strlen(pair) == 0))
    break;


   assign = strchr(pair,'=');
   assign[0] = '\0';
   value = assign+1;

   if (bootverbose)
    printf("ENV[%p]: %s=%s\n",
        (void*)((char*)pair - (char*)nv),
        pair, value);

   kern_setenv(pair, value);

   if (strcasecmp(pair, "WAN_MAC_ADDR") == 0) {

    if (bootverbose)
     printf("ENV: aliasing "
         "WAN_MAC_ADDR to ethaddr"
         " = %s\n", value);
    kern_setenv("ethaddr", value);
   }
   else if (strcasecmp(pair, "LAN_MAC_ADDR") == 0){

    if (bootverbose)
     printf("ENV: aliasing "
         "LAN_MAC_ADDR to eth1addr"
         " = %s\n", value);
    kern_setenv("eth1addr", value);
   }

   if (strcmp(pair, "bootverbose") == 0)
    bootverbose = strtoul(value, 0, 0);
   if (strcmp(pair, "boothowto" ) == 0)
    boothowto = strtoul(value, 0, 0);

  }
  free(nv, M_DEVBUF);
 }

 bus_space_unmap(sc->bst, sc->bsh, NVRAM_MAX_SIZE);

 return (0);
}
